--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>!function(e,t,a,n,s,c){e.gaf||((n=e.gaf=function(){n.process?n.process.apply(n,arguments):n.queue.push(arguments)}).queue=[],n.t=+new Date,(s=t.createElement(a)).async=1,s.src="https://d1c9wriao5k55q.cloudfront.net/assets/gaf.js?t="+864e5*Math.ceil(new Date/864e5),(c=t.getElementsByTagName(a)[0]).parentNode.insertBefore(s,c))}(window,document,"script"),gaf("init","ed1ac1b8-1354-4fca-b69f-dca4b89bd170"),gaf("event","pageload")</script>
   </body>
 </html>
